# NanoMail

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  README.md  build.rs  论文大纲.md
src/: main.rs
src/app/: mod.rs
src/config/: crypto.rs  mod.rs  oauth_config.rs  storage.rs
src/mail/: mod.rs
src/mail/gmail/: api.rs  mod.rs  oauth.rs  token.rs  types.rs
src/notification/: mod.rs
src/sync/: mod.rs
src/tray/: events.rs  icon.rs  menu.rs  mod.rs
src/ui/: mod.rs
src/utils/: avatar.rs  http_client.rs  machine_id.rs  mod.rs
ui/: main.slint
ui/components/: account_card.slint  badge.slint  icon_button.slint
ui/themes/: colors.slint
