[package]
name = "nanomail"
version = "0.1.0"
edition = "2024"
authors = ["NanoMail Project"]
description = "A lightweight Gmail notification client for Windows"
license = "GPL-3.0"

[dependencies]
# UI框架 - Slint (软件渲染，无GPU依赖)
slint = { version = "1.8", features = ["renderer-winit-software"] }

# 异步运行时 - 只启用必需的 features（减少编译大小和启动开销）
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

# HTTP客户端 - 建议全局共享以复用连接池
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OAuth2
oauth2 = "4.4"
tiny_http = "0.12"

# 系统集成
tray-icon = "0.14"
webbrowser = "1.0"
image = { version = "0.25", default-features = false, features = ["ico", "png", "jpeg"] }

# 数据序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 加密
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"

# Windows 注册表（用于机器指纹）
winreg = "0.52"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
dirs = "5.0"
once_cell = "1.20"                                 # 懒初始化单例（用于全局 HTTP 客户端）

# 屏幕尺寸检测（跨平台、轻量）
screen_size = "0.1.0"

# Windows 原生 Toast 通知 (WinRT API)
winrt-toast-reborn = "0.3"


[build-dependencies]
slint-build = "1.8"

# Windows 资源嵌入 (用于设置 exe 图标)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'   # 以体积优先（兼顾性能），减小二进制体积
lto = true        # 开启链接时优化（较保守的 LTO）
codegen-units = 1 # 单编译单元
strip = true      # 移除调试符号
panic = 'abort'   # 减小panic处理代码

[profile.dev]
opt-level = 1 # 开发构建也进行基础优化（快速检测错误）
